--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.png">
-  <title>Document</title>
+  <title>Mistress Tiana|Official website</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     }
 
     .caption-font {
-      font-family: 'Cantora One', sans-serif;/*-----------------------------------------new-------------------*/
+      font-family: 'Cantora One', sans-serif;
     }
   </style>
 </head>
@@ -63,7 +63,7 @@
         </div>
       </header>
       <main class="main swiper-slide index-item">
-        <h1 class="title visually-hidden">Тату</h1>
+        <h1 class="title visually-hidden">Mistress Tiana</h1>
         <div class="main__container">
           <p class="main__text">My name is Mistress Tiana, I am a real practicing domme, born to show men that their place is at my beautiful feet.</p>
           <p class="main__text">I am strict, uncompromising and insightful. I know when you jerk off, for example now, reading this text and looking at the photo.</p>
@@ -73,7 +73,7 @@
       <footer class="footer swiper-slide index-item">
         <div class="footer__container">
           <div class="footer__header">
-            <p class="footer__text">Совсем недавно я завела свой бесплатный канал. Этот канал для моих поклонников, для тех, у кого не хватает денег и смелости чтоб общаться со своей госпожой лично. Зоходи на канал, лайкай мои фото и дрочи по-тихому.</p><a class="footer__button button" href="#">my free channel</a>
+            <p class="footer__text">Совсем недавно я завела свой бесплатный канал. Этот канал для моих поклонников, для тех, у кого не хватает денег и смелости чтоб общаться со своей госпожой лично. Зоходи на канал, лайкай мои фото и дрочи по-тихому.</p><a class="footer__button button" href="https://t.me/+gX-O-yOIDYE2NTJi">my free channel</a>
           </div>
           <div class="footer__footer">
             <p class="footer__text">I don't waste my time on losers and time wasters, so if you want to associate with me, you must join my fan club. It's easy- just follow the link below.</p>
